--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@reown/appkit": "^1.7.3",
+    "@reown/appkit": "^1.8.9",
     "@reown/appkit-adapter-wagmi": "^1.8.4",
+    "@reown/walletkit": "^1.4.1",
     "@tanstack/react-query": "^5.83.0",
+    "@walletconnect/modal": "^2.7.0",
     "@walletconnect/universal-provider": "^2.23.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -52,6 +54,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
